<?xml version="1.0" encoding="UTF-8"?>

<project
	xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<groupId>com.babai.ssplot</groupId>
	<artifactId>ssplot</artifactId>
	<version>2.2.6</version>

	<name>SSPlot</name>
	<url>http://www.github.com/babaissarkar/ssplot</url>
	<description>
		A simple plotting utility and numerical simulator.
		It can :
		1. Plot datafiles (2D and 3D).
		2. Can change appearance of plot.
		3. Solve and plot ODE and Difference Equations.
		4. Plot functions of one and two variables.
		5. Comes with its own JavaScript based Console for simple calculation
		tasks.
	</description>

	<developers>
		<developer>
			<id>babaissarkar</id>
			<name>Subhraman Sarkar</name>
			<email>suvrax@gmail.com</email>
			<timezone>Asia/Kolkata</timezone>
		</developer>
	</developers>

	<licenses>
		<license>
			<name>LGPL-2.1-or-later</name>
			<url>https://www.gnu.org/licenses/old-licenses/lgpl-2.1.txt</url>
		</license>
	</licenses>


	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<maven.compiler.source>17</maven.compiler.source>
		<maven.compiler.target>17</maven.compiler.target>
	</properties>

	<repositories>
		<repository>
			<id>local-repo</id>
			<url>file:///usr/share/maven-repo</url>
		</repository>
	</repositories>

	<dependencies>
		<dependency>
			<groupId>com.formdev</groupId>
			<artifactId>flatlaf</artifactId>
			<version>3.2</version>
		</dependency>
		<dependency>
			<groupId>com.formdev</groupId>
			<artifactId>flatlaf-intellij-themes</artifactId>
			<version>3.2</version>
		</dependency>
		<dependency>
			<groupId>org.mozilla</groupId>
			<artifactId>rhino</artifactId>
			<version>1.7.14</version>
		</dependency>
		<dependency>
			<groupId>org.mozilla</groupId>
			<artifactId>rhino-engine</artifactId>
			<version>1.7.14</version>
		</dependency>
		<!-- JUnit 5 -->
		<dependency>
			<groupId>org.junit.jupiter</groupId>
			<artifactId>junit-jupiter</artifactId>
			<version>5.10.0</version>
			<scope>test</scope>
		</dependency>
	</dependencies>

	<build>
		<resources>
			<resource>
				<directory>src/main/resources</directory>
				<filtering>false</filtering>
				<excludes>
					<exclude>filtered/**</exclude>
				</excludes>
			</resource>
			<resource>
				<directory>src/main/resources/filtered</directory>
				<filtering>true</filtering>
			</resource>
		</resources>

		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-shade-plugin</artifactId>
				<version>3.5.0</version>
				<configuration>
					<finalName>${project.artifactId}</finalName>
					<outputDirectory>${project.basedir}/jar</outputDirectory>
					<shadedArtifactAttached>true</shadedArtifactAttached>
					<artifactSet>
						<includes>
							<include>com.formdev:flatlaf</include>
							<include>com.formdev:flatlaf-intellij-themes</include>
							<include>org.mozilla:rhino</include>
							<include>org.mozilla:rhino-engine</include>
						</includes>
					</artifactSet>
					<transformers>
						<transformer
							implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
							<mainClass>ui.MainFrame</mainClass>
						</transformer>
					</transformers>
				</configuration>
				<executions>
					<execution>
						<phase>package</phase>
						<goals>
							<goal>shade</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>exec-maven-plugin</artifactId>
				<version>3.0.0</version>
				<executions>
					<execution>
						<id>run-jpackage</id>
						<phase>package</phase>
						<goals>
							<goal>exec</goal>
						</goals>
					</execution>
				</executions>
				<configuration>
					<executable>jpackage</executable>
					<arguments>
						<argument>--type</argument>
						<argument>deb</argument>
						<argument>--input</argument>
						<argument>${project.basedir}/jar</argument>
						<argument>--main-jar</argument>
						<argument>${project.artifactId}.jar</argument>
						<argument>--name</argument>
						<argument>${project.name}</argument>
						<argument>--app-version</argument>
						<argument>${project.version}</argument>
						<argument>--description</argument>
						<argument>${project.description}</argument>
						<argument>--install-dir</argument>
						<argument>/usr</argument>
						<argument>--main-class</argument>
						<argument>ui.MainFrame</argument>
						<argument>--icon</argument>
						<argument>src/main/resources/${project.artifactId}.png</argument>
					</arguments>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-checkstyle-plugin</artifactId>
				<version>3.2.0</version> <!-- Make sure to use the latest version -->
				<executions>
					<execution>
						<id>checkstyle</id>
						<goals>
							<goal>check</goal>
						</goals>
					</execution>
				</executions>
				<configuration>
					<configLocation>checkstyle.xml</configLocation>
					<!-- Optional: You can suppress warnings from 3rd-party
					libraries with excludeFilter properties -->
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>3.1.2</version>
			</plugin>
		</plugins>
	</build>
</project>
